Corrected angle section clippings

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,11 +2,9 @@ html, body {
   height: 100%;
 }
 
-
 img {
   max-width: 100%;
 }
-
 
 .main {
   z-index: 1000;
@@ -24,13 +22,17 @@ img {
 }
 
 .section, .elementor-section-wrap {
-  @include clip(true);
-  padding: $section-padding - 0px 0 0 0;
+  padding: $section-padding 0 0 0;
   background: $white;
   position: relative;
 
+  @include media-breakpoint-up(sm) {
+    @include clip(true);
+  }
+
   @include media-breakpoint-down(xs) {
-    padding: $section-padding / 1.5 0 $section-padding / 2 + 30px 0;
+    padding: $section-padding / 2 0 $section-padding / 2 + 30px 0;
+    @include clip(true, 9px);
   }
 
   &:last-child {
